# AI-Overlay-Cross

./: BUILD_INSTRUCTIONS.md  CMakeLists.txt  README.md  vcpkg.json
include/: AppController_mac.h  AppController_win.h  Common.h  HotkeyManager_mac.h  HotkeyManager_win.h  IHotkeyManager.h  IOverlayWindow.h  MessageQueue.h  OverlayWindow_mac.h  OverlayWindow_win.h  StateManager.h  WebSocketServer.h
include/websocketpp/common/: asio.hpp
src/platform/mac/: AppController_mac.mm  HotkeyManager_mac.mm  OverlayWindow_mac.mm  main_mac.mm
src/platform/win/: AppController_win.cpp  HotkeyManager_win.cpp  OverlayWindow_win.cpp  main_win.cpp
src/shared/: StateManager.cpp  WebSocketServer.cpp
